# solo-para-bridge-poc

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
deployments/local-scripts/: relay-headers-and-messages-millau-rialto-parachain.sh  relay-messages-millau-to-rialto.sh  relay-messages-rialto-to-millau.sh  relay-millau-to-rialto.sh  relay-rialto-to-millau.sh  run-millau-node.sh  run-rialto-node.sh  run-westend-node.sh
deployments/zombienet/: rialto-parachain.toml
docs/: node-reuse.md  runtime-upgrades.md  rust-setup.md
fuzz/storage-proof/: Cargo.toml
modules/beefy/: Cargo.toml
primitives/chain-bridge-hub-cumulus/: Cargo.toml
primitives/chain-millau/: Cargo.toml
primitives/chain-millau/src/: lib.rs
primitives/polkadot-core/: Cargo.toml
relays/bin-substrate/: Cargo.toml
relays/client-bridge-hub-rococo/: Cargo.toml
relays/client-bridge-hub-wococo/: Cargo.toml
relays/client-kusama/: Cargo.toml
relays/client-millau/: Cargo.toml
relays/client-millau/src/: lib.rs
relays/client-polkadot/: Cargo.toml
relays/client-rialto/: Cargo.toml
relays/client-rialto-parachain/: Cargo.toml
relays/client-rococo/: Cargo.toml
relays/client-substrate/: Cargo.toml
relays/client-westend/: Cargo.toml
relays/client-wococo/: Cargo.toml
relays/lib-substrate-relay/: Cargo.toml
relays/messages/: Cargo.toml
relays/parachains/: Cargo.toml
relays/utils/: Cargo.toml
scripts/: send-message-from-millau-rialto.sh
